--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,9 @@ collections:
   blog:
     output: false
     permalink: /:collection/:path/
+  casestudies:
+    output: true
+    permalink: /:collection/:path/
   customers:
     output: false
     permalink: /:collection/:path/
@@ -33,9 +36,6 @@ collections:
     output: false
     permalink: /:collection/:path/
   products-and-services:
-    output: false
-    permalink: /:collection/:path/
-  casestudies:
     output: false
     permalink: /:collection/:path/
   terms:
